--- a/PaddleNLP/benchmark/transformer/configs/transformer.big.yaml
+++ b/PaddleNLP/benchmark/transformer/configs/transformer.big.yaml
@@ -30,9 +30,9 @@ infer_batch_size: 16
 shuffle_batch: True
 # Data shuffle only works when sort_type is pool or none
 shuffle: True
-# reader_seed must be set when shuffle is True and using multi-cards to train. 
+# shuffle_seed must be set when shuffle is True and using multi-cards to train. 
 # Otherwise, the number of batches cannot be guaranteed. 
-reader_seed: 128
+shuffle_seed: 128
 
 # Hyparams for training:
 # The number of epoches for training
