--- a/PaddleNLP/benchmark/transformer/configs/transformer.big.yaml
+++ b/PaddleNLP/benchmark/transformer/configs/transformer.big.yaml
@@ -96,4 +96,7 @@ weight_sharing: True
 use_amp: False
 scale_loss: 1.0
 
+# Whether to use multi-card/multi-node distributed training.
+is_distributed: True
+
 max_iter: None
