--- a/PaddleNLP/benchmark/transformer/configs/transformer.big.yaml
+++ b/PaddleNLP/benchmark/transformer/configs/transformer.big.yaml
@@ -17,19 +17,20 @@ output_file: "predict.txt"
 # The <bos>, <eos> and <unk> tokens in the dictionary.
 special_token: ["<s>", "<e>", "<unk>"]
 # The directory to store data.
-root: None
+root: "/workspace/models-1/PaddleNLP/benchmark/transformer/"
 
 # Whether to use cuda
 use_gpu: True
 
 # Mixed precision training
 use_amp: True
+use_pure_fp16: True
 scale_loss: 128.0
 
 # Args for reader, see reader.py for details
 pool_size: 200000
 sort_type: "global"
-batch_size: 4096
+batch_size: 5120
 infer_batch_size: 16
 shuffle_batch: True
 # Data shuffle only works when sort_type is pool or none
@@ -71,7 +72,7 @@ src_vocab_size: 10000
 # Size of target word dictionay
 trg_vocab_size: 10000
 # Used to pad vocab size to be multiple of pad_factor.
-pad_factor: 8
+pad_factor: 1
 # Used to pad sequence length to be multiple of pad_seq.
 pad_seq: 1
 # Used to make batch size to be multiple of bsz_multi.
@@ -99,10 +100,6 @@ dropout: 0.1
 # The flag indicating whether to share embedding and softmax weights.
 # Vocabularies in source and target should be same for weight sharing.
 weight_sharing: True
-
-# Use amp or not
-use_amp: False
-scale_loss: 1.0
 
 # Whether to use multi-card/multi-node distributed training.
 is_distributed: True
