update doc for fleet api

--- a/PaddleNLP/benchmark/transformer/configs/transformer.base.yaml
+++ b/PaddleNLP/benchmark/transformer/configs/transformer.base.yaml
@@ -96,4 +96,12 @@ dropout: 0.1
 # Vocabularies in source and target should be same for weight sharing.
 weight_sharing: True
 
+# Use amp or not
+use_amp: False
+scale_loss: 1.0
+
+# Whether to use multi-card/multi-node distributed training.
+# Only works for static graph for now.
+is_distributed: True
+
 max_iter: None
