--- a/PaddleNLP/benchmark/transformer/configs/transformer.big.yaml
+++ b/PaddleNLP/benchmark/transformer/configs/transformer.big.yaml
@@ -101,6 +101,7 @@ use_amp: False
 scale_loss: 1.0
 
 # Whether to use multi-card/multi-node distributed training.
+# Only works for static graph for now.
 is_distributed: True
 
 max_iter: None
