--- a/PaddleNLP/benchmark/transformer/configs/transformer.big.yaml
+++ b/PaddleNLP/benchmark/transformer/configs/transformer.big.yaml
@@ -7,7 +7,7 @@ init_from_checkpoint: ""
 # Path of the pretrain model, to better solve the current task
 init_from_pretrain_model: ""
 # Path of trained parameter, to make prediction
-init_from_params: "./trained_models/step_450000/"
+init_from_params: "./trained_models/step_final/"
 # The directory for saving model
 save_model: "trained_models"
 # Set seed for CE or debug
@@ -17,21 +17,16 @@ output_file: "predict.txt"
 # The <bos>, <eos> and <unk> tokens in the dictionary.
 special_token: ["<s>", "<e>", "<unk>"]
 # The directory to store data.
-root: "/workspace/models-1/PaddleNLP/benchmark/transformer/"
+root: None
 
 # Whether to use cuda
 use_gpu: True
 
-# Mixed precision training
-use_amp: True
-use_pure_fp16: True
-scale_loss: 128.0
-
 # Args for reader, see reader.py for details
 pool_size: 200000
 sort_type: "global"
-batch_size: 5120
-infer_batch_size: 8
+batch_size: 4096
+infer_batch_size: 16
 shuffle_batch: True
 # Data shuffle only works when sort_type is pool or none
 shuffle: True
@@ -51,7 +46,7 @@ beta1: 0.9
 beta2: 0.997
 eps: 1e-9
 # The parameters for learning rate scheduling.
-warmup_steps: 16000
+warmup_steps: 4000
 # The weight used to mix up the ground-truth distribution and the fixed
 # uniform distribution in label smoothing when training.
 # Set this as zero if label smoothing is not wanted.
@@ -72,7 +67,7 @@ src_vocab_size: 10000
 # Size of target word dictionay
 trg_vocab_size: 10000
 # Used to pad vocab size to be multiple of pad_factor.
-pad_factor: 1
+pad_factor: 8
 # Used to pad sequence length to be multiple of pad_seq.
 pad_seq: 1
 # Used to make batch size to be multiple of bsz_multi.
@@ -100,6 +95,11 @@ dropout: 0.1
 # The flag indicating whether to share embedding and softmax weights.
 # Vocabularies in source and target should be same for weight sharing.
 weight_sharing: True
+
+# Mixed precision training
+use_amp: False
+use_pure_fp16: False
+scale_loss: 128.0
 
 # Whether to use multi-card/multi-node distributed training.
 # Only works for static graph for now.
