--- a/PaddleNLP/benchmark/transformer/configs/transformer.base.yaml
+++ b/PaddleNLP/benchmark/transformer/configs/transformer.base.yaml
@@ -23,6 +23,7 @@ root: None
 use_gpu: True
 
 # Args for reader, see reader.py for details
+dataset: "en-zh"
 pool_size: 200000
 sort_type: "global"
 batch_size: 4096
@@ -46,7 +47,7 @@ beta1: 0.9
 beta2: 0.997
 eps: 1e-9
 # The parameters for learning rate scheduling.
-warmup_steps: 8000
+warmup_steps: 4000
 # The weight used to mix up the ground-truth distribution and the fixed
 # uniform distribution in label smoothing when training.
 # Set this as zero if label smoothing is not wanted.
@@ -103,6 +104,6 @@ scale_loss: 128.0
 
 # Whether to use multi-card/multi-node distributed training.
 # Only works for static graph for now.
-is_distributed: True
+is_distributed: False
 
 max_iter: None
