--- a/PaddleNLP/paddlenlp/ext_op/src/CMakeLists.txt
+++ b/PaddleNLP/paddlenlp/ext_op/src/CMakeLists.txt
@@ -6,12 +6,8 @@ if(EXISTS ${PY_LIB_DIR}/libpaddle_framework.so)
     -lpaddle_framework
   )
 endif()
-if(EXISTS ${FT_LIB_DIR}/libdecoding.a)
-  list(APPEND lib_link -ldecoding)
-endif()
-if(EXISTS ${FT_LIB_DIR}/libdecoder.a)
-  list(APPEND lib_link -ldecoder)
-endif()
+
+#add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
 
 add_definitions(-DPADDLE_WITH_CUDA)
 add_definitions(-DEIGEN_USE_GPU)
@@ -19,5 +15,8 @@ add_definitions(-DPADDLE_USE_DSO)
 add_definitions(-DPADDLE_WITH_MKLDNN)
 
 set(decoding_op_files fusion_decoding_op.cc fusion_decoding_op.cu)
+
 add_library(decoding_op SHARED ${decoding_op_files})
-target_link_libraries(decoding_op PRIVATE -lcublas -lcudart ${lib_link})
+target_link_libraries(decoding_op PRIVATE -lcublas -lcudart ${lib_link} decoder decoding)
+
+# -ccbin cc 
