--- a/PaddleNLP/paddlenlp/ext_op/src/CMakeLists.txt
+++ b/PaddleNLP/paddlenlp/ext_op/src/CMakeLists.txt
@@ -7,7 +7,9 @@ if(EXISTS ${PY_LIB_DIR}/libpaddle_framework.so)
   )
 endif()
 
-#add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
+set(ft_lib_link
+  -ldecoder -ldecoding -ltopk -lcuda_int8_kernels -lcuda_kernels -lonline_softmax_beamsearch
+)
 
 add_definitions(-DPADDLE_WITH_CUDA)
 add_definitions(-DEIGEN_USE_GPU)
@@ -17,6 +19,5 @@ add_definitions(-DPADDLE_WITH_MKLDNN)
 set(decoding_op_files fusion_decoding_op.cc fusion_decoding_op.cu)
 
 add_library(decoding_op SHARED ${decoding_op_files})
-target_link_libraries(decoding_op PRIVATE -lcublas -lcudart ${lib_link} decoder decoding)
-
-# -ccbin cc 
+add_dependencies(decoding_op extern_${THIRD_PARTY_NAME})
+target_link_libraries(decoding_op PRIVATE -lcublas -lcudart ${lib_link} ${ft_lib_link})
