--- a/PaddleSpeech/SoundClassification/requirements.txt
+++ b/PaddleSpeech/SoundClassification/requirements.txt
@@ -1,5 +1,7 @@
-librosa==0.8.0
-matplotlib==3.3.4
 paddlepaddle-gpu=2.0.1
-tqdm
-visualdl
+scikit-learn==0.20.0
+numba==0.49.0
+visualdl==2.1.1
+tqdm==4.59.0
+librosa==0.7.2
+pre-commit
