--- a/tutorials/mobilenetv3_prod/Step6/deploy/lite_infer_cpp_arm_cpu/mobilenet_v3/Makefile
+++ b/tutorials/mobilenetv3_prod/Step6/deploy/lite_infer_cpp_arm_cpu/mobilenet_v3/Makefile
@@ -3,7 +3,7 @@ export ARM_ABI
 
 LITE_ROOT=./inference_lite_lib.android.armv8
 
-include ./Makefile.def
+include ${LITE_ROOT}/demo/cxx/Makefile.def
 
 THIRD_PARTY_DIR=${LITE_ROOT}/third_party
 
